# TRT-sandbox

./: .clang_complete  .cspell.json  .gitignore  CMakeLists.txt  README.md
config/: ssd300x300.yaml
cuda-samples/: README.md  copy_data.cu  reverse_1d.cu
cuda-samples/0.introduction/: matrix_add.cu
cuda-samples/02.thread-oranization/: README.md  hello3.cu  hello5.cu
cuda-samples/03.basic-framework/: README.md  add1.cu  add2wrong.cu  add3if.cu  add4device.cu
cuda-samples/04.error-check/: README.md  check1api.cu  check2kernel.cu  error.cuh
cuda-samples/05.prerequisites-for-speedup/: README.md  add1cpu.cu  add2gpu.cu  add3memcpy.cu  arithmetic1cpu.cu  arithmetic2gpu.cu
cuda-samples/1.npp/: CMakeLists.txt
cuda-samples/1.npp/src/: warp.cpp
cuda-samples/common/include/: exceptions.hpp  image.hpp  image_allocators_cpu.hpp  image_cpu.hpp  image_packed.hpp  io.hpp  pixel.hpp
cuda-samples/cub/device-wide/radix-sort/: sort_keys.cu  sort_keys_descending.cu  sort_pairs.cu  sort_pairs_descending.cu
cuda-samples/cub/device-wide/reduce/: reduce.cu
cuda-samples/ex1.npp/: Makefile  README.md
cuda-samples/ex1.npp/src/: box_filter.cpp  canny_edge.cpp  warp.cpp
cuda-samples/tensor/: README.md  embedding.cu  polyline.cu  polyline2.cu  rotate.cu  topk.cu  trajectory.cu  trajectory2.cu  transform.cu  transform2.cu
cuda-samples/tensor/agent/: onehot.cu  preprocess.cu  trajectory.cu  trajectory_nms.cu
cuda-samples/tensor/polyline/: center.cu  distance.cu  previous.cu  topk.cu  transform.cu
data/config/: ssd300x300-mb2lite.yaml  ssd300x300-mmdet.yaml
docs/: plugins.md
include/: base_detection2d.hpp  cuda_utils.hpp  ssd.hpp  trt_ssd.hpp  trt_utils.hpp  trt_yolo.hpp  yolo.hpp
include/plugins/: batched_nms.hpp  batched_nms_kernel.hpp  common_cuda_helper.hpp  cub_helper.h  gather_topk.hpp  gather_topk_kernel.hpp  grid_priors.hpp  grid_priors_kernel.hpp  nms_kernel.h  plugin_base.hpp  trt_plugin_base.hpp  trt_plugin_helper.hpp  trt_serialize.hpp
include/utils/: common_utils.hpp  cuda_utils.hpp  npp_utils.hpp  trt_utils.hpp
sample/: CMakeLists.txt  README.md  kernel_call.cu  matrix_mul.cu  reverse_nd.cu  vector_add.cu
src/: CMakeLists.txt  base_detection2d.cpp  det2d.cpp  main.cpp  ssd.cpp  trt_ssd.cpp  trt_yolo.cpp  yolo.cpp
src/plugins/: batched_nms.cpp  gather_topk.cpp  gather_topk_kernel.cu  grid_priors.cpp  grid_priors_kernel.cu  nms_kernel.cu  sortScoresPerClass.cu
test/: CMakeLists.txt
